--- a/src/app/users/layout/layout.component.html
+++ b/src/app/users/layout/layout.component.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-2">
-        <h5>Side nav</h5>
-        <hr>
+        <users-sidebar/>
     </div>
     <div class="col">
         <router-outlet />
