--- a/src/app/users/components/side-bar/side-bar.component.html
+++ b/src/app/users/components/side-bar/side-bar.component.html
@@ -1,10 +1,9 @@
-<h5 class="text-primary text-center"> Menu </h5>
-<hr class="text-primary">
-<ul class="list-group">
+<ul class="list-group mt-3">
     <li 
         *ngFor="let user of menuUsers; index as i"
         class="list-group-item"
         [routerLink]="user.path"
+        [routerLinkActive]="['active']"
     >
         {{user.titulo}}
     </li>
