--- a/src/app/users/layout/layout.component.html
+++ b/src/app/users/layout/layout.component.html
@@ -1,8 +1,9 @@
+<users-navbar/>
 <div class="row">
     <div class="col-2">
         <users-sidebar/>
     </div>
-    <div class="col">
+    <div class="col mt-2">
         <router-outlet />
     </div>
 </div>
